--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,24 +12,33 @@
 <main>
     <header>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5000ca" fill-opacity="1" d="M0,256L1440,96L1440,0L0,0Z"></path></svg>
+        <h1>Cherubins Messages Alliance</h1>
+
     </header>
-    <button>add message</button>
-    <div class="msg-board"><article class="msg-card">
+    
+    <div id="button"><button>Add post</button></div>
+    <div class="msg-board">
+        <article class="msg-card">
         <div class="msg-card-header">
           <span class="username">C-3PO</span><span class="timestamp">6/22/2020</span>
         </div>
         <div class="msg">We're doomed!</div>
-      </article><article class="msg-card">
+      </article>
+      
+      <article class="msg-card">
         <div class="msg-card-header">
           <span class="username">Obi-Wan Kenobi</span><span class="timestamp">6/22/2020</span>
         </div>
         <div class="msg">Hello there!</div>
-      </article><article class="msg-card">
+      </article>
+      
+      <article class="msg-card">
         <div class="msg-card-header">
           <span class="username">Leia Organa</span><span class="timestamp">6/22/2020</span>
         </div>
         <div class="msg">Help me, Obi-Wan Kenobi. You're my only hope.</div>
-      </article><article class="msg-card">
+      </article>
+      <article class="msg-card">
         <div class="msg-card-header">
           <span class="username">s7358382</span><span class="timestamp">6/22/2020</span>
         </div>
@@ -39,7 +48,7 @@
     <!-- <div class="wave"></div>    -->
 </main>
 
-
+<footer>Created by Adriel Mebaley © 2020</footer>
 
 </body>
 </html>
