--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,28 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Message Board</title>
 </head>
 <body>
     
 <main>
-    <header>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5000ca" fill-opacity="1" d="M0,256L1440,96L1440,0L0,0Z"></path></svg>
-        <h1>Cherubins Messages Alliance</h1>
 
-    </header>
+  <%- include('./header.ejs')-%>
     
-    <div id="button"><button>Add post</button></div>
-    <div class="msg-board">
-        <article class="msg-card">
+    <div id="button"><a href="/new" id="add-post">Add post</a></div>
+
+
+     <div class="msg-board">
+
+       <!-- <article class="msg-card">
         <div class="msg-card-header">
           <span class="username">C-3PO</span><span class="timestamp">6/22/2020</span>
         </div>
         <div class="msg">We're doomed!</div>
-      </article>
+      </article> -->
+
+      <% messages.forEach(function(message) {%>
+
+        <article class="msg-card">
+          <div class="msg-card-header">
+            <span class="username"><%= message.user%></span><span class="timestamp"><%= message.added.toLocaleDateString('en-GB')%></span>
+          </div>
+          <div class="msg"><%= message.text%></div>
+        </article>
+
+
+        <%});%>
+
+
       
-      <article class="msg-card">
+ <!--      <article class="msg-card">
         <div class="msg-card-header">
           <span class="username">Obi-Wan Kenobi</span><span class="timestamp">6/22/2020</span>
         </div>
@@ -43,12 +57,16 @@
           <span class="username">s7358382</span><span class="timestamp">6/22/2020</span>
         </div>
         <div class="msg">sxsxsxsxsx</div>
-      </article></div>
+      </article> -->
+    
+    </div>
 
     <!-- <div class="wave"></div>    -->
 </main>
 
 <footer>Created by Adriel Mebaley © 2020</footer>
 
+
+<script src="/js/main"></script>
 </body>
 </html>
